creating class for characters

--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
         </div>
     </section>
     <section class="log" id="log"></section>
+
+    <script src="assets/scripts/classes.js"></script>
+    <script src="assets/scripts/scripts.js"></script>
 </body>
 </html>
