creating class stage

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <section class="figtharea">
         <div class="hero">
             <div class="life_bar">
-                <div class="life" id="life" style="width: 10%;"></div>
+                <div class="life" style="width: 10%;"></div>
             </div>
-            <div class="name" id="name_hero">---</div>
+            <div class="name">---</div>
             <button id="atack_button">Atacar</button>
         </div>
         <div class="monster">
             <div class="life_bar">
-                <div class="life" id="life" style="width: 10%;"></div>
+                <div class="life" style="width: 10%;"></div>
             </div>
-            <div class="name" id="name_monster">---</div>
+            <div class="name">---</div>
             <button id="atack_button">Atacar</button>
         </div>
     </section>
