creatig function doAttack

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
                 <div class="life" style="width: 10%;"></div>
             </div>
             <div class="name">---</div>
-            <button id="atack_button">Atacar</button>
+            <button id="attack_button">Atacar</button>
         </div>
         <div class="monster">
             <div class="life_bar">
                 <div class="life" style="width: 10%;"></div>
             </div>
             <div class="name">---</div>
-            <button id="atack_button">Atacar</button>
+            <button id="attack_button">Atacar</button>
         </div>
     </section>
     <section class="log" id="log"></section>
