--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
             <button id="attack_button">Atacar</button>
         </div>
     </section>
-    <section class="log" id="log"></section>
+    <section >
+        <ul class="log">
+            
+        </ul>
+    </section>
 
     <script src="assets/scripts/classes.js"></script>
     <script src="assets/scripts/scripts.js"></script>
